<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="sm20_corp.geopointage.View.MainActivity"
    tools:showIn="@layout/app_bar_main">


    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EEEEEE"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/content_main_textview_adresse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_adresse_select" />

            <TextView
                android:id="@+id/content_main_textview_iotp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/iotp" />

            <Button
                android:id="@+id/content_main_button_select_adress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_adress" />

            <Button
                android:id="@+id/content_main_button_guider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guide" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/content_main_recycler_view_colaborateur"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:overScrollMode="never" />

        </LinearLayout>


        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/app_bar_main_fab_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="right|bottom"
            app:menu_animationDelayPerItem="50"
            app:menu_backgroundColor="@android:color/transparent"
            app:menu_buttonSpacing="0dp"
            app:menu_colorNormal="@color/Orange"
            app:menu_colorPressed="@color/OrangeLight"
            app:menu_colorRipple="#99FFFFFF"
            app:menu_fab_label=""
            app:menu_fab_size="normal"
            app:menu_icon="@drawable/ic_fab_stop"
            app:menu_labels_colorNormal="#333333"
            app:menu_labels_colorPressed="#444444"
            app:menu_labels_colorRipple="#66FFFFFF"
            app:menu_labels_cornerRadius="3dp"
            app:menu_labels_ellipsize="none"
            app:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
            app:menu_labels_margin="0dp"
            app:menu_labels_maxLines="-1"
            app:menu_labels_position="left"
            app:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
            app:menu_labels_showShadow="true"
            app:menu_labels_singleLine="false"
            app:menu_labels_textColor="#FFFFFF"
            app:menu_labels_textSize="14sp"
            app:menu_openDirection="up"
            app:menu_shadowColor="#66000000"
            app:menu_shadowRadius="4dp"
            app:menu_shadowXOffset="1dp"
            app:menu_shadowYOffset="3dp"
            app:menu_showShadow="true"
            android:visibility="gone">

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/content_main_fab_stop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="8dp"
                android:src="@drawable/ic_fab_stop"
                app:fab_colorNormal="@color/Orange" />


            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/content_main_fab_pause"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="8dp"
                android:src="@drawable/ic_fab_pause"
                app:fab_colorNormal="@color/Orange" />

        </com.github.clans.fab.FloatingActionMenu>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/content_main_fab_play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="right|bottom"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_fab_play"
            app:fab_colorNormal="@color/Orange" />

</android.support.design.widget.CoordinatorLayout>
</RelativeLayout>
