<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.AppBarOverlay">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/activity_add_contact_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/colorPrimary"
                    app:popupTheme="@style/AppTheme.PopupOverlay">

                    <ImageView
                        android:id="@+id/activity_add_contact_imageview_arrow_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/ic_arrow_back_white_24dp" />

                    <ImageView
                        android:id="@+id/activity_add_contact_imageview_done"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:src="@drawable/ic_done_white_24dp" />

                </android.support.v7.widget.Toolbar>
            </android.support.design.widget.AppBarLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="8dp"
                    android:id="@+id/textInputLayout"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <EditText
                        android:id="@+id/activity_add_contact_edittext_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/last_name"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/activity_add_contact_imageview_mic_lastname"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_mic_black_24dp"
                    android:layout_marginTop="30dp"
                    android:layout_centerVertical="false"
                    android:layout_alignParentEnd="true"
                    android:layout_width="35dp"
                    android:layout_height="35dp" />

            </RelativeLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="8dp"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <EditText
                    android:id="@+id/activity_add_contact_edittext_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>




            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="8dp"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <EditText
                        android:id="@+id/activity_add_contact_edittext_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/id"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/activity_add_contact_imageview_mic_id"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_mic_black_24dp"
                    android:layout_marginTop="30dp"
                    android:layout_centerVertical="false"
                    android:layout_alignParentEnd="true"
                    android:layout_width="35dp"
                    android:layout_height="35dp" />

            </RelativeLayout>




        </LinearLayout>

    </ScrollView>
</android.support.design.widget.CoordinatorLayout>